# pyboostcvconverter

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CVBoostConverter.hpp  LICENSE  Makefile  README.md  appveyor.yml  cmake_install.cmake  matmul.cpp  package.xml
.github/ISSUE_TEMPLATE/: bug_report.md
cmake/: DetectPython.cmake
include/pyboostcvconverter/: mat_vector_indexing_suite.hpp  pyboostcvconverter.hpp
src/: pyboost_cv2_converter.cpp  pyboost_cv3_converter.cpp  pyboost_cv4_converter.cpp  python_module.cpp
tests/: CMakeLists.txt  memory_test_video_capture.py  test_project_source.cpp  tests.py
